[package]
name = "ethers-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
async-trait = "0.1.60"
thiserror = "1.0.38"

[dev-dependencies]
url = "2.3.1"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
