[package]
name = "ethers-utils"
version = "0.2.0"
edition = "2021"

description = "Extensions for ethers"
license = "MIT"
homepage = "https://github.com/onsails/ethers-utils"
documentation = "https://docs.rs/ethers-utils"

[package.metadata.docs.rs]
all-features = true

[features]
erc20 = []

[dependencies]
ethers = "1.0.2"
async-trait = "0.1.60"
thiserror = "1.0.38"

[dev-dependencies]
url = "2.3.1"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
